# HB-bot

./: .gitignore  README.md  pyproject.toml
hb_bot/: .env  __main__.py  message_texts.py
